# python-telegram-bot

./: .git-blame-ignore-revs  README.rst  codecov.yml  pyproject.toml
.github/config/: auditor.yml
.github/workflows/: action-performance.yml  chango.yml  copilot-setup-steps.yml  docs-admonitions.yml  docs-linkcheck.yml  gha_security.yml  labelling.yml  lock.yml  release_pypi.yml  release_test_pypi.yml  stale.yml  test_official.yml  type_completeness.yml  type_completeness_monthly.yml  unit_tests.yml
changes/unreleased/: 0001.HpRCQkivZjaiGGtaQZixUa.toml  0002.W9SsEBGFiAENPcejRvz9th.toml
docs/source/: changelog.rst
