[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-telegram-bot"
version = "0.1.0"
description = "Simple minimal test setup"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Example Author", email = "example@example.com" }]
dependencies = []

[project.optional-dependencies]
tests = [
  "pytest==8.4.2",
  "pytest-cov",
  "coverage>=7.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=./ --cov-report=xml --cov-report=term -q"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true
