[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "python-telegram-bot"
version = "0.1.0"
description = "Simple minimal test setup"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Example Author", email = "example@example.com" }]
dependencies = [
  "httpx>=0.27,<0.29"
]

[project.optional-dependencies]
tests = [
  "pytest==8.4.2",
  "pytest-cov",
  "coverage>=7.4"
]

# Tell Hatchling where your package lives (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/telegram"]

# Optional but tidy
[tool.hatch.build.targets.sdist]
exclude = [".venv*", "venv*", ".github", "uv.lock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=./ --cov-report=xml --cov-report=term -q"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true