[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "python-telegram-bot"
version = "0.1.0"
description = "Simple minimal test setup"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Example Author", email = "example@example.com" }]
dependencies = [
  "httpx>=0.27,<0.29"
]

[project.optional-dependencies]
tests = [
  "pytest==8.4.2",
  "pytest-cov",
  "coverage>=7.4"
]

# Tell Hatchling where your package lives (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/telegram"]

# Optional but tidy
[tool.hatch.build.targets.sdist]
exclude = [".venv*", "venv*", ".github", "uv.lock"]

# UPDATED: Fixed pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=xml --cov-report=term --cov-report=html -v"

# UPDATED: Fixed coverage configuration
[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2

# NEW: Explicitly set coverage output location
[tool.coverage.xml]
output = "coverage.xml"